--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/platform-express": "^7.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "mongoose": "^5.9.22",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
